--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <title>Sonique Drums Product Catalog</title>
   <meta name="viewport" content="width=device-width, initial-scale=4">
   <!-- Favicon -->
-  <link rel="icon" href="https://soniquedrums.github.io/product-catalog/assets/s-favicon.png" type="image/x-icon">
+  <link rel="icon" href="https://soniquedrums.github.io/product-catalog/assets/s-favicon.png" type="image/png">
   
   <script src="https://cdn.jsdelivr.net/npm/page-flip@2.0.7/dist/js/page-flip.browser.min.js"></script>
   <script>
