--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Sonique Drums Product Catalog</title>
+  <title>Sonique Product Catalog</title>
   <meta name="viewport" content="width=device-width, initial-scale=4">
   <!-- Favicon -->
   <link rel="icon" href="https://soniquedrums.github.io/product-catalog/assets/s-favicon.png" type="image/png">
