--- a/index.html
+++ b/index.html
@@ -4,8 +4,11 @@
   <meta charset="UTF-8">
   <title>Sonique Product Catalog</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <!-- Favicon -->
-  <link rel="icon" href="https://soniquedrums.github.io/product-catalog/assets/s-favicon.png" type="image/png">
+  <!-- Standard PNG favicon -->
+<link rel="icon" type="image/png" href="https://soniquedrums.github.io/product-catalog/assets/s-favicon.png">
+
+<!-- ICO fallback for desktop browsers -->
+<link rel="icon-2" type="image/x-icon" href="https://soniquedrums.github.io/product-catalog/assets/s-favicon.ico">
   
   <script src="https://cdn.jsdelivr.net/npm/page-flip@2.0.7/dist/js/page-flip.browser.min.js"></script>
   <script>
