--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
             {
               width: 816,
               height: 1056,
-              size: 'stretch',
+              size: 'fixed',
               minWidth: 315,
               minHeight: 400,
               maxWidth: 2000,
