--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
 
     if (typeof St !== 'undefined' && St.PageFlip) {
       const pageFlip = new St.PageFlip(flipbookElement, {
-        width: flipbookWidth,
+        width: 816,
         height: flipbookHeight,
         size: 'fixed',
         minWidth: 315,
