--- a/index.html
+++ b/index.html
@@ -22,6 +22,10 @@
     }
 
     #flipbook {
+      width: 100vw;
+      height: 100vh;
+      max-width: 2000px;
+      margin: 0 auto;
       position: absolute;
       top: 0;
       left: 0;
