--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
 
     if (typeof St !== 'undefined' && St.PageFlip) {
       const pageFlip = new St.PageFlip(flipbookElement, {
-        width: 816,
+        width: flipbookWidth,
         height: flipbookHeight,
         size: 'fixed',
         minWidth: 315,
