use relative position

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     }
 
     .download-btn {
-      position: absolute;
+      position: relative;
       top: 20px;
       right: 20px;
       background: #222;
