--- a/index.html
+++ b/index.html
@@ -36,6 +36,8 @@
       text-decoration: none;
       border-radius: 6px;
       font-size: 14px;
+      font-style: normal;
+      font-family: Arial, Helvetica, sans-serif;
       z-index: 1000;
     }
     .download-btn:hover {
