--- a/index.html
+++ b/index.html
@@ -27,9 +27,10 @@
     }
 
     .download-btn {
-      position: relative;
+      position: absolute;
       top: 20px;
       right: 20px;
+      bottom: 100px;
       background: #222;
       color: white;
       padding: 10px 15px;
