--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
       padding: 0;
       height: 100%;
       overflow: hidden;
-      background: #727272;
-      color: #727272;
+      background: #ffffff;
+      color: #ffffff;
     }
 
     #flipbook {
@@ -30,7 +30,7 @@
       position: absolute;
       top: 0;
       left: 0;
-      background: #727272;
+      background: #ffffff;
       transform-origin: top left;
     }
 
